--- a/ReVou/Kalkulator BMI/warna.css
+++ b/ReVou/Kalkulator BMI/warna.css
@@ -1,8 +1,50 @@
+/*
+Bagian Utama
+*/
+@import url('https://fonts.googleapis.com/css2?family=Lunasima&display=swap');
+
+* {
+   
+    /* box-sizing: border-box; */
+    margin-top: 5px;
+    border: none;
+    font-family: 'Lunasima', sans-serif;
+    line-break: 100px auto;
+
+}
+
+label {
+    margin-bottom: 10px; /* Increase or decrease this value as needed */
+    justify-content: center;
+    align-items: center;
+}
+
+input[type="text"] {
+    margin-top: 3px; /* Increase or decrease this value as needed */
+    justify-content: center;
+    align-items: center;
+    box-sizing: content-box;
+    width: 99%; /* Set the width to 100% to fill the container */
+}
+
+
 #box-utama {
-    background-color: rgb(185, 185, 185);
     color: black;
     border: none;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding: 10px;
     
+    
+}
+#bmiForm {
+    background-color: #c7c8c9;
+    /* justify-content:stretch; */
+    align-items: center;
+    padding: 10px;
+
 }
 div.a{
     word-wrap: break-word;
@@ -19,6 +61,19 @@ body p{
 input {
     border-style: none;
 }
+.button {
+ color: white;
+ background-color: #5bbfdd;
+ height: 30px;
+ width: 100px;
+ align-items: center;
+ padding-left: 5px;
+}
+.reset{
+height: 20px;
+ width: 70px;
+ align-items: center;
+}
 /* hasil tampilan */
 
 /* #Hasil{ */
@@ -27,36 +82,52 @@ input {
     */
   /*  background-color: rgb(227, 242, 242);
   }*/
-  * {
-   
-    box-sizing: border-box;
-    border: none;
-    
-}
+
+  /*
+Bagian Hasil
+*/
+ 
   #result{
-      font-size: 30px;
+      font-size: 60px;
       font-weight: 700;
       letter-spacing: 1px;
       text-align: center;
       
   }
   #category{
-      font-size: 18px;
+      font-size: 14px;
       text-align: center;
-      letter-spacing: 1px;
+      letter-spacing: 0.8px;
   }
-div.display {
+/* div.display {
     color: black;
-}
+} */
 #hal2{
     text-align: center;
 }
 #box-hasil {
-    background-color: rgb(185, 185, 185);
+    background-color: #c7c8c9;
     color: black;
     border: none;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    margin-left: 200px;
+    margin-right: 200px;
     
 }
+#box-hasil2 {
+    font-size: 14px;
+    text-align: center;
+    letter-spacing: 0.8px;
+    
 body h1{
+    margin-top: 10px;
     padding: 5px;
+    text-align: center;
+}
+#kembali {
+    height: 2000px;
+    width: 1500px;
+    background-color: #5bbfdd;
 }
