--- a/ReVou/Kalkulator BMI/warna.css
+++ b/ReVou/Kalkulator BMI/warna.css
@@ -119,7 +119,7 @@ Bagian Hasil
 #box-hasil2 {
     font-size: 14px;
     text-align: center;
-    letter-spacing: 0.8px;
+    letter-spacing: 0.8px;}
     
 body h1{
     margin-top: 10px;
